# hijacker

./: .gitignore  AUTHORS  AUTHORS.md  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  appunti  autogen.sh  command.line  config.status  configure  configure.ac
binutils/: Makefile  disasm.c  reader.c  test.c  writer.c
examples/: .gitignore  conf-example.xml  conf.xml  executable.c  executable2.c  executable3.c  inject.s
examples/vptracker/: client.c  client_noinstr.c  rules.xml  rules_vpt.xml  tracer.c  tracer_vpt.c
examples/vptracker/example_1 (function calls)/: executable.c  executable2.c  executable3.c  rules.xml
examples/vptracker/example_10 (nested loops)/: executable.c
examples/vptracker/example_2 (while loop)/: executable  executable.c  executable.s  graphdump (copy).txt  graphdump.txt  treedump (copy).txt  treedump.txt
examples/vptracker/example_3 (controlflow)/: executable  executable.c  graphdump (another copy).txt  graphdump (copy).txt  graphdump.txt  treedump (another copy).txt  treedump (copy).txt  treedump.txt
examples/vptracker/example_4 (function calls madness)/: executable  executable.c  executable.s  graphdump (another copy).txt  graphdump.txt  treedump (another copy).txt  treedump (copy).txt  treedump.txt
examples/vptracker/example_5 (jump tables)/: executable  executable.c  graphdump (3rd copy).txt  treedump (3rd copy).txt  treedump (copy).txt
examples/vptracker/example_6 (recursion)/: executable  executable.c  graphdump (copy).txt  treedump (copy).txt  treedump.txt
examples/vptracker/example_7 (function pointers)/: executable  executable.c  executable_noinstr  graphdump (copy).txt  graphdump.txt  treedump (another copy).txt  treedump (copy).txt
examples/vptracker/example_8 (matrix multiplication)/: executable  executable.c
examples/vptracker/example_9 (pthreads)/: client.c  executable  executable.c
lib/logger/: tracer.c
modules/: branch.c  branch.h  branch_l.c  monitor.c  monitor.h  monitor32.h  monitor64.h
modules/arch/x86/: branch32.S  branch32_l.S  branch64.S  branch64_l.S  monitor32.S  monitor64.S
parse/: parse.py  plot.plt  run.sh
src/: Makefile  Makefile.am  Makefile.in  compile.h  config.h  hijacker  hijacker.h  init.h  loadrules.c  main.c  object.c  options.h  prints.h  rules.h  structs.c  structs.h  utils.c  utils.h
src/.deps/: loadrules.Po  main.Po  utils.Po
src/executables/: create.c  executable.h  load.c
src/executables/.deps/: create.Po  load.Po
src/executables/coff/: coff-defs.h  parse-coff.c
src/executables/coff/.deps/: emit-coff.Po  parse-coff.Po
src/executables/elf/: elf-defs.h  emit-elf.c  emit-elf.c~  emit-elf.h  handle-elf.c  handle-elf.h  parse-elf.c  parse-elf.h  reverse-elf.c  reverse-elf.h
src/executables/elf/.deps/: emit-elf.Po  handle-elf.Po  parse-elf.Po  reverse-elf.Po
src/executables/pe/: parse-pe.c  pe-defs.h
src/executables/pe/.deps/: emit-pe.Po  parse-pe.Po
src/ibr/: block.c  function.c  ibr.h  instruction.c  reloc.c  section.c  symbol.c  version.c
src/instructions/: block.c  instruction.h
src/instructions/.deps/: disassemble.Po
src/instructions/alpha/: instruction.h
src/instructions/alpha/.deps/: emit-alpha.Po  parse-alpha.Po
src/instructions/arm/: instruction.h
src/instructions/arm/.deps/: emit-arm.Po  parse-arm.Po
src/instructions/ia_64/: instruction.h
src/instructions/ia_64/.deps/: emit-ia_64.Po  parse-ia_64.Po
src/instructions/mips/: instruction.h
src/instructions/mips/.deps/: emit-mips.Po  parse-mips.Po
src/instructions/powerpc/: instruction.h
src/instructions/powerpc/.deps/: emit-powerpc.Po  parse-powerpc.Po
src/instructions/sparc/: instruction.h
src/instructions/sparc/.deps/: emit-sparc.Po  parse-sparc.Po
src/instructions/x86/: emit-x86.c  emit-x86.h  instruction.h  parse-x86.c  reverse-x86.c  reverse-x86.h  x86.h
src/instructions/x86/.deps/: emit-x86.Po  parse-x86.Po  reverse-x86.Po
src/presets/: presets.c  presets.h  vptracker.c  vptracker.h
src/presets/smtracer/: smtracer.c  smtracer.h
src/presets/vptracker/: vptracker.c  vptracker.h
src/rules/: apply-rules.c  apply-rules.h  insert_insn.c  insert_insn.h  load-rules.c  load-rules.h  monitor.h  monitor64.S  reverse-block.c  reverse-generator.bak  reverse-generator.c  reverse-generator.c.old  reverse-generator.h  reverse-instrument.c  reverse-instrument.h  trampoline.h  trampoline64.S
src/rules/.deps/: apply-rules.Po  insert_insn.Po  reverse-instrument.Po
src/structs/: bst.c  graph.c  list.c  structs.h
test/: Makefile
test/core/: calqueue.c  calqueue.h  rng.c  rng.h  scheduler.c  scheduler.h
test/model/: pcs.c  pcs.h
test/modules/: reverse-generator.c
